--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "~3.4.3",
     "lodash": "~2.4.1",
-    "ejs": "~0.8.4"
+    "ejs": "~0.8.4",
+    "firebase": "~1.0.11"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -53,14 +54,13 @@
     "grunt-env": "~0.4.1",
     "grunt-node-inspector": "~0.1.3",
     "grunt-nodemon": "~0.2.0",
-    "open": "~0.0.4"
+    "open": "~0.0.4",
+    "grunt-gh-pages": "^0.9.1"
   },
   "engines": {
     "node": ">=0.10.0"
-
   },
   "scripts": {
     "test": "grunt test"
   }
 }
-
