--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,17 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "angular-local-storage": "~0.0.1"
+    "angular-local-storage": "~0.0.1",
+    "angular-pusher": "~0.0.13",
+    "angular-ui-router": "~0.2.10",
+    "angular-spinner": "~0.5.0",
+    "spin.js": "~2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "angular": "1.2.6"
   }
 }
