--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,9 @@
     "angular-local-storage": "~0.0.1",
     "angular-pusher": "~0.0.13",
     "angular-ui-router": "~0.2.10",
-    "angular-spinner": "~0.5.0",
-    "spin.js": "~2.0.1",
     "angular-animate": "~1.2.20",
-    "animate.css": "~3.2.0"
+    "animate.css": "~3.2.0",
+    "angular-loading-bar": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
