--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "grunt-node-inspector": "~0.1.3",
     "grunt-nodemon": "~0.2.0",
     "open": "~0.0.4",
-    "grunt-gh-pages": "^0.9.1"
+    "grunt-gh-pages": "~0.9.1"
   },
   "engines": {
     "node": ">=0.10.0"
